--- a/public/css/main.css
+++ b/public/css/main.css
@@ -6,6 +6,8 @@ body {
   line-height: 30px;
   padding: 15px;
   width: 720px;
+  background-image:url('/images/soundbarrier.png');
+  background-repeat:no-repeat;
 
 }
 header, footer, section, article {
